<resources>
    <string-array name="fitness_form_activity">
        <item>Extreme</item>
        <item>Moderate</item>
        <item>Low</item>
    </string-array>

    <string-array name="fitness_form_goal">
        <item>Lose Fat</item>
        <item>Gain Muscle</item>
        <item>Maintain Weight</item>
        <item>Other</item>
    </string-array>

    <string-array name="create_workout_primary_goal">
        <item>Lose Fat</item>
        <item>Gain Muscle</item>
        <item>Strength</item>
        <item>Endurance</item>
        <item>General Health</item>
    </string-array>

    <string-array name="create_workout_intensity">
        <item>Extreme</item>
        <item>Moderate</item>
        <item>Low</item>
    </string-array>

    <string-array name="create_workout_exercise_type">
        <item>Weight Training</item>
        <item>Cardiovascular</item>
        <item>Weight Cardio Hybrid</item>
        <item>Other</item>
    </string-array>

    <string name="app_name">FitnessTracker</string>
    <string name="register_first_name_text">First Name:</string>
    <string name="register_last_name_text">Last Name:</string>
    <string name="register_user_name_text">Username:</string>
    <string name="register_email_text">Email:</string>
    <string name="register_password_text">Password:</string>
    <string name="confirm_password">Confirm Password:</string>
    <string name="register_button_submit">Submit</string>
    <string name="login_username_text">Username:</string>
    <string name="login_password_text">Pasword:</string>
    <string name="login_login_button_text">Login</string>
    <string name="login_register_button_text">Register</string>
    <string name="fitness_form_age_text">Age:</string>
    <string name="fitness_form_weight_text">Weight:</string>
    <string name="fitness_form_height_text">Height:</string>
    <string name="fitness_form_activity_level_text">Activity Level:</string>
    <string name="fitness_form_activity_prompt">Activity Level</string>
    <string name="fitness_form_submit_button_text">Submit</string>
    <string name="main_menu_home_text">Home</string>
    <string name="main_menu_workout_text">Workout Plan</string>
    <string name="main_menu_progress_text">Progress</string>
    <string name="main_menu_nutrition_text">Nutrition</string>
    <string name="main_menu_settings_text">Settings</string>
    <string name="title_activity_main_tabs">MainTabs</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="register_title_text">Register an Account</string>
    <string name="create_workout_name_text">Name</string>
    <string name="create_workout_plan">Create Workout Plan</string>
    <string name="create_workout_primary_goal_text">Primary Goal</string>
    <string name="create_workout_intensity_text">Intensity</string>
    <string name="create_workout_exercise_text">Type of Exercise</string>
    <string name="create_workout_length_text">Recommended Length(Weeks)</string>
    <string name="create_workout_name_hint_text">Enter the name of your workout plan</string>
    <string name="create_strength_workout_name_hint">Enter the name of the workout</string>
    <string name="create_strength_workout_name_text">Name</string>
    <string name="create_strength_workout_add_exercise_button_text">Add Exercise</string>
    <string name="excercises">Excercises</string>
    <string name="add_exercise">Add Exercise</string>
    <string name="create_workout_plan_create_workout_cardio_exercises_text">Excercises</string>
    <string name="create_workout_plan_create_workout_weight_exercises_text">Exercises</string>
    <string name="create_workout_plan_create_workout_other_exercises_text">Exercises</string>
    <string name="create_workout_plan_create_workout_other_add_exercise_text">Add Exercise</string>
    <string name="create_workout_plan_add_exercise_weight_weight_exercises_text">Weight Excercises</string>
    <string name="create_workout_plan_add_exercise_weight_create_exercise_text">Create Exercise</string>
    <string name="create_workout_plan_add_exercise_cardio_cardio_exercises_text">Cardio Exercises</string>
    <string name="create_workout_plan_add_exercise_cardio_create_exercise_text">Create Exercise</string>
    <string name="tab_settings_settings_text">Settings</string>
    <string name="tab_workout_workout_text">Workout</string>
    <string name="tab_home_home_text">Home</string>
    <string name="tab_progress_progress_text">Progress</string>
    <string name="tab_nutrition_nutrition_text">Nutrition</string>
    <string name="filler">Not sure what goes here yet</string>
    <string name="create_workout_plan_create_exercise_cardio_exercise_name_text">Exercise Name</string>
    <string name="create_workout_plan_create_exercise_cardio_enter_the_name_of_the_exercise">Enter the name of the exercise</string>
    <string name="create_workout_plan_create_exercise_cardio_location_text">Location</string>
    <string name="create_workout_plan_create_exercise_cardio_location_tip_text">Specify the machine or location for the performance of this exercise</string>
    <string name="create_workout_plan_create_exercise_cardio_instructions_text">Instructions</string>
    <string name="create_workout_plan_create_exercise_cardio_instructions_hint_text">Describe how the exercise is to be performed</string>
    <string name="create_workout_plan_create_exercise_weight_exercise_name_text">Exercise Name</string>
    <string name="create_workout_plan_create_exercise_weight_exercise_name_hint_text">Enter the name of the exercise</string>
    <string name="create_workout_plan_create_exercise_weight_muscle_group_text">Muscle Group</string>
    <string name="create_workout_plan_create_exercise_weight_muscle_group_hint_text">Specify the muscle group the exercise targets</string>
    <string name="create_workout_plan_create_exercise_weight_instructions_text">Instructions</string>
    <string name="create_workout_plan_create_exercise_weight_instructions_hint_text">Describe how the exercise is to be performed</string>
    <string name="create_workout_plan_add_workouts_weight_training_text">Weight Training</string>
    <string name="create_workout_plan_add_workouts_create_workout_text">Create Workout</string>
    <string name="create_workout_plan_add_workouts_cardiovascular_training_text">Cardiovascular Training</string>
    <string name="create_workout_plan_add_workout_other_text">Other</string>
    <string name="create_workout_plan_create_workout_cardio_add_exercise_text">Add Exercise</string>
    <string name="create_workout_plan_add_exercise_other_placeholder_text">Placeholder</string>
</resources>
