<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <item
        android:title="@string/main_menu_home_text"
        android:icon="@drawable/ic_home_button"
        android:id="@+id/main_menu_home"/>

    <item
        android:title="@string/main_menu_workout_text"
        android:icon="@drawable/ic_workout_button"
        android:id="@+id/main_menu_workout_plan"/>

    <item
        android:title="@string/main_menu_progress_text"
        android:icon="@drawable/ic_progress_button"
        android:id="@+id/main_menu_progress"/>

    <item
        android:title="@string/main_menu_nutrition_text"
        android:icon="@drawable/ic_nutrition_button"
        android:id="@+id/main_menu_nutrition"/>

    <item
        android:title="@string/main_menu_settings_text"
        android:icon="@drawable/ic_settings_button"
        android:id="@+id/main_menu_settings"/>

</menu>
