<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_margin="@dimen/activity_vertical_margin"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/create_workout_plan_create_exercise_cardio_exercise_name_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:hint="@string/create_workout_plan_create_exercise_cardio_enter_the_name_of_the_exercise"
        android:maxLines="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/create_workout_plan_create_exercise_cardio_location_text"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:hint="@string/create_workout_plan_create_exercise_cardio_location_tip_text"
        android:maxLines="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginTop="15dp"
        android:text="@string/create_workout_plan_create_exercise_cardio_instructions_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:hint="@string/create_workout_plan_create_exercise_cardio_instructions_hint_text"
        android:maxLines="7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>