<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_margin="@dimen/activity_vertical_margin"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:text="@string/excercises"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <!-- Exercise Placeholder-->
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/insert_workout_add_exercise_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/create_workout_plan_add_exercise_other_placeholder_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>


    <Button
        android:id="@+id/create_other_exercise_button"
        android:background="@android:color/white"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:text="@string/add_exercise"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>