<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_register"
    android:layout_marginTop="@dimen/register_vertical_margin"
    android:layout_marginBottom="@dimen/register_vertical_margin"
    android:layout_marginRight="@dimen/register_horizontal_margin"
    android:layout_marginLeft="@dimen/register_horizontal_margin"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_gravity="center"
        android:id="@+id/register_title"
        android:text="@string/register_title_text"
        android:textSize="25sp"
        android:layout_marginBottom="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <!-- First Name -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:gravity="end"
            android:textAlignment="textEnd"
            android:minWidth="130dp"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_first_name_text"
            android:id="@+id/register_first_name" />

        <EditText
            android:id="@+id/register_first_name_edit"
            android:inputType="textPersonName"
            android:layout_width="match_parent"
            android:layout_height="50dp" />

    </LinearLayout>

    <!-- Last Name -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:gravity="end"
            android:textAlignment="textEnd"
            android:minWidth="130dp"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_last_name_text"
            android:id="@+id/register_last_name" />

        <EditText
            android:id="@+id/register_last_name_edit"
            android:inputType="textPersonName"
            android:layout_width="match_parent"
            android:layout_height="50dp" />

    </LinearLayout>

    <!-- Username -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:gravity="end"
            android:textAlignment="textEnd"
            android:minWidth="130dp"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_user_name_text"
            android:id="@+id/register_user_name" />

        <EditText
            android:id="@+id/register_username_edit"
            android:inputType="textNoSuggestions"
            android:layout_width="match_parent"
            android:layout_height="50dp" />

    </LinearLayout>

    <!-- Email textview -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:gravity="end"
            android:textAlignment="textEnd"
            android:minWidth="130dp"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_email_text"
            android:id="@+id/register_email" />

        <EditText
            android:id="@+id/register_email_edit"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="50dp" />

    </LinearLayout>

    <!-- Password -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:gravity="end"
            android:textAlignment="textEnd"
            android:minWidth="130dp"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_password_text"
            android:id="@+id/register_password" />

        <EditText
            android:id="@+id/register_password_edit"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp" />

    </LinearLayout>


    <!-- Confirm Password-->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:gravity="end"
            android:textAlignment="textEnd"
            android:minWidth="130dp"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_password"
            android:id="@+id/register_confirm_password" />

        <EditText
            android:id="@+id/register_confirm_password_edit"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>

    <!-- Submit button-->
    <Button
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:text="@string/register_button_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/register_submit_button"/>

</LinearLayout>