<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_margin="@dimen/activity_vertical_margin"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:text="@string/create_workout_plan_add_workouts_weight_training_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/create_workout_strength_button"
            android:background="@android:color/white"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:text="@string/create_workout_plan_add_workouts_create_workout_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:text="@string/create_workout_plan_add_workouts_cardiovascular_training_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/create_workout_cardio_button"
            android:background="@android:color/white"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:text="@string/create_workout_plan_add_workouts_create_workout_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:text="@string/create_workout_plan_add_workout_other_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/create_workout_other_button"
            android:background="@android:color/white"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:text="@string/create_workout_plan_add_workouts_create_workout_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>